add real Facade implementation

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "crobays/asset",
-    "description": "Simple asset query call to get images-, pictures-, stylesheets- and script links.",
-    "version": "0.9.1",
+    "description": "Simple asset query call to get images-, pictures-, file-, stylesheets- and script links.",
+    "version": "0.9.2",
     "keywords": ["web", "laravel"],
     "license": "MIT",
     "type": "project",
@@ -11,14 +11,14 @@
             "email": "0VxMFScFvK9wnCyB@userex.nl"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "Crobays\\": "src/Crobays"
+        }
+    },
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*"
-    },
-    "autoload": {
-        "psr-0": {
-            "Crobays\\Asset": "src/"
-        }
     },
     "minimum-stability": "stable"
 }
