--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,12 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*"
+        "illuminate/support": "4.2.*",
+        "illuminate/config": "4.2.*"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0",
+        "codeception/codeception": "~2.0",
         "intervention/image": "dev-master"
     },
     "minimum-stability": "stable"
