--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0",
-        "codeception/codeception": "~2.0"
+        "codeception/codeception": "~2.0",
+        "intervention/image": "~2.0"
     },
     "minimum-stability": "stable"
 }
