--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-        "illuminate/config": "4.2.*"
+        "illuminate/config": "4.2.*",
+        "intervention/image": "~2.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0",
-        "codeception/codeception": "~2.0",
-        "intervention/image": "~2.0"
+        "codeception/codeception": "~2.0"
     },
     "minimum-stability": "stable"
 }
